# CoreVu

./: .clang-format  .gitignore  CMakeLists.txt  Planning.txt  README.md
coremem/: CMakeLists.txt
coremem/include/: ChunkMemoryManager.hpp  IAllocator.hpp  LinearAllocator.hpp  MemoryManager.hpp  PoolAllocator.hpp  StackAllocator.hpp
coremem/src/: IAllocator.cpp  LinearAllocator.cpp  MemoryManager.cpp  PoolAllocator.cpp  StackAllocator.cpp
corevu/: CMakeLists.txt  compile_shaders.bat
corevu/include/: corevu_buffer.hpp  corevu_camera.hpp  corevu_descriptors.hpp  corevu_device.hpp  corevu_frame_info.hpp  corevu_gameobject.hpp  corevu_model.hpp  corevu_pipeline.hpp  corevu_swap_chain.hpp  corevu_texture.hpp  corevu_window.hpp  global_utils.hpp
corevu/include/ext/: keyboard_movement_controller.hpp
corevu/include/systems/: color_system.hpp  gravity_system.hpp  point_light_system.hpp  render_system.hpp  texture_render_system.hpp  vector_field_system.hpp
corevu/shaders/: point_light.frag  point_light.frag.spv  point_light.vert  point_light.vert.spv  simple_shader.frag  simple_shader.frag.spv  simple_shader.vert  simple_shader.vert.spv
corevu/src/: corevu_buffer.cpp  corevu_camera.cpp  corevu_descriptors.cpp  corevu_device.cpp  corevu_gameobject.cpp  corevu_model.cpp  corevu_pipeline.cpp  corevu_swap_chain.cpp  corevu_texture.cpp  corevu_window.cpp
corevu/src/ext/: keyboard_movement_controller.cpp
corevu/src/systems/: point_light_system.cpp  render_system.cpp  texture_render_system.cpp
corevu_test/: app.cpp  app.hpp  gravity_system_test.hpp  main.cpp  mem_sys_test.hpp  render_system.cpp  render_system.hpp  renderer.cpp  renderer.hpp
